# raster-vision

./: .codecov.yml  .coveragerc  .dockerignore  .flake8  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile-cpu  Dockerfile-gpu  Dockerfile-old  Dockerfile-pip  Dockerfile-pytorch  Dockerfile-tf  Dockerfile-tf-cpu  Dockerfile-tf-gpu  Dockerfile.amd64  Dockerfile.arm64  Dockerfile.base  Dockerfile.cpu.arm64  Dockerfile.pybase  Dockerfile.pytorch.amd64  Dockerfile.rasterio  GOALS.md  README.md  THIRD_PARTY_LICENSES.txt  Vagrantfile  _test_import_order.py  cowc_potsdam.py  cowc_potsdam_all.py  extras_requirements.json  mytest.py  mytest2.py  mytest3.py  naip-clean.py  naip-pivots.py  naip-plugin.py  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
rastervision_aws_s3/: pyproject.toml  requirements.in  requirements.txt  setup.py
rastervision_aws_s3/rastervision/aws_s3/: __init__.py  s3_file_system.py
rastervision_aws_sagemaker/: pyproject.toml  requirements.in  requirements.txt  setup.py
rastervision_aws_sagemaker/rastervision/aws_sagemaker/: __init__.py  aws_sagemaker_runner.py
rastervision_core/: pyproject.toml  requirements.in  requirements.txt  setup.py
rastervision_core/rastervision/core/: __init__.py  box.py  cli.py  data_sample.py  predictor.py  raster_stats.py
rastervision_core/rastervision/core/analyzer/: __init__.py  analyzer.py  analyzer_config.py  stats_analyzer.py  stats_analyzer_config.py
rastervision_core/rastervision/core/backend/: __init__.py  backend.py  backend_config.py
rastervision_core/rastervision/core/data/: __init__.py  activate_mixin.py  class_config.py  dataset_config.py  scene.py  scene_config.py  utils.py
rastervision_core/rastervision/core/data/crs_transformer/: __init__.py  crs_transformer.py  identity_crs_transformer.py  rasterio_crs_transformer.py
rastervision_core/rastervision/core/data/label/: __init__.py  chip_classification_labels.py  labels.py  object_detection_labels.py  semantic_segmentation_labels.py  utils.py
rastervision_core/rastervision/core/data/label_source/: __init__.py  chip_classification_label_source.py  chip_classification_label_source_config.py  label_source.py  label_source_config.py  object_detection_label_source.py  object_detection_label_source_config.py  semantic_segmentation_label_source.py  semantic_segmentation_label_source_config.py
rastervision_core/rastervision/core/data/label_store/: __init__.py  chip_classification_geojson_store.py  chip_classification_geojson_store_config.py  label_store.py  label_store_config.py  object_detection_geojson_store.py  object_detection_geojson_store_config.py  semantic_segmentation_label_store.py  semantic_segmentation_label_store_config.py  utils.py
rastervision_core/rastervision/core/data/raster_source/: __init__.py  multi_raster_source.py  multi_raster_source_config.py  raster_source.py  raster_source_config.py  rasterio_source.py  rasterio_source_config.py  rasterized_source.py  rasterized_source_config.py  stac_config.py  temporal_multi_raster_source.py  xarray_source.py  xarray_source_config.py
rastervision_core/rastervision/core/data/raster_transformer/: __init__.py  cast_transformer.py  cast_transformer_config.py  min_max_transformer.py  min_max_transformer_config.py  nan_transformer.py  nan_transformer_config.py  raster_transformer.py  raster_transformer_config.py  reclass_transformer.py  reclass_transformer_config.py  rgb_class_transformer.py  rgb_class_transformer_config.py  stats_transformer.py  stats_transformer_config.py  utils.py
rastervision_core/rastervision/core/data/utils/: __init__.py  aoi_sampler.py  factory.py  geojson.py  misc.py  raster.py  rasterio.py  vectorization.py
rastervision_core/rastervision/core/data/vector_source/: __init__.py  class_inference.py  geojson_vector_source.py  geojson_vector_source_config.py  vector_source.py  vector_source_config.py
rastervision_core/rastervision/core/data/vector_transformer/: __init__.py  buffer_transformer.py  buffer_transformer_config.py  class_inference_transformer.py  class_inference_transformer_config.py  shift_transformer.py  shift_transformer_config.py  vector_transformer.py  vector_transformer_config.py
rastervision_core/rastervision/core/evaluation/: __init__.py  chip_classification_evaluation.py  chip_classification_evaluator_config.py  class_evaluation_item.py  classification_evaluation.py  classification_evaluator.py  classification_evaluator_config.py  evaluation_item.py  evaluator.py  evaluator_config.py  object_detection_evaluation.py  object_detection_evaluator.py  object_detection_evaluator_config.py  semantic_segmentation_evaluation.py  semantic_segmentation_evaluator.py  semantic_segmentation_evaluator_config.py
rastervision_core/rastervision/core/rv_pipeline/: __init__.py  chip_classification.py  chip_classification_config.py  chip_options.py  object_detection.py  object_detection_config.py  rv_pipeline.py  rv_pipeline_config.py  semantic_segmentation.py  semantic_segmentation_config.py  utils.py
rastervision_core/rastervision/core/utils/: __init__.py  cog.py  filter_geojson.py  misc.py  stac.py  types.py
rastervision_gdal_vsi/: pyproject.toml  requirements.in  requirements.txt  setup.py
rastervision_gdal_vsi/rastervision/gdal_vsi/: __init__.py  vsi_file_system.py
rastervision_pytorch_backend/: pyproject.toml  requirements.txt  setup.py
rastervision_pytorch_backend/rastervision/pytorch_backend/: __init__.py  pytorch_chip_classification.py  pytorch_chip_classification_config.py  pytorch_learner_backend.py  pytorch_learner_backend_config.py  pytorch_object_detection.py  pytorch_object_detection_config.py  pytorch_semantic_segmentation.py  pytorch_semantic_segmentation_config.py  utils.py
rastervision_pytorch_backend/rastervision/pytorch_backend/examples/: README.md  test.py  tiny_spacenet.py  utils.py
rastervision_pytorch_backend/rastervision/pytorch_backend/examples/chip_classification/: spacenet_rio.py  spacenet_rio_data_prep.ipynb  spacenet_rio_external_model.py  spacenet_rio_nochip.py
(+2423 files in other folders)
