[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rastervision_aws_s3"
version = "0.31.2-dev"
description = "A rastervision plugin that adds an AWS S3 file system."
readme = "README.md"
authors = [{ name = "Azavea", email = "info@azavea.com" }]
license = { text = "Apache License 2.0" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "computer-vision",
    "deep-learning",
    "earth-observation",
    "machine-learning",
    "ml",
    "geospatial",
    "geospatial-machine-learning",
    "geospatial-processing",
    "raster",
]
dependencies = [
    "boto3==1.34.155",
    "botocore==1.34.158",
    "rastervision_pipeline==0.31.2-dev",
    "tqdm==4.66.5",
]

[project.optional-dependencies]
debugging = []
dev = []

[project.urls]
"Homepage" = "https://github.com/azavea/raster-vision"
"GitHub" = "https://github.com/azavea/raster-vision"

[tool.setuptools]
include-package-data = true
packages = { find = { exclude = ["integration_tests*", "tests*"] } }
