[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rastervision_core"
version = "0.31.2-dev"
description = "A rastervision plugin that adds geospatial machine learning pipelines."
readme = "README.md"
authors = [{ name = "Azavea", email = "info@azavea.com" }]
license = { text = "Apache License 2.0" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "computer-vision",
    "deep-learning",
    "earth-observation",
    "machine-learning",
    "ml",
    "geospatial",
    "geospatial-machine-learning",
    "geospatial-processing",
    "raster",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/azavea/raster-vision"
"GitHub" = "https://github.com/azavea/raster-vision"

[tool.setuptools]
include-package-data = true
packages = { find = { exclude = ["integration_tests*", "tests*"] } }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
